changing some files to folders

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Hi! My name is dan</h1>
-    <p class="lead">I am from ndakl.</p>
+    <p class="lead">I am from poop.</p>
     <h3>Example heading <span class="badge badge-secondary">Contact Me</span></h3>
     <ul class="list-group">
-      <li class="list-group-item">My GitHub username is bvuyerbu</li>
-      <li class="list-group-item">LinkedIn: bverb</li>
+      <li class="list-group-item">My GitHub username is poopue</li>
+      <li class="list-group-item">LinkedIn: poop</li>
     </ul>
   </div>
 </div>
